# chesscoach-ai

./: .gitignore  CODEBASE_GUIDE.md  Dockerfile  README.md  app.py  docker-compose.yml  dockerignore  env.example  main.py  pyproject.toml  render.yaml
frontend/: package-lock.json
frontend/app/: page.tsx
qdrant_storage/: meta.json
src/: chunker.py  embedder.py  evaluate_rag.py  fetch_games.py  parse_pgn.py  retriever.py  router.py
