[project]
name = "chesscoach-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.3",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
